<resources>
    <string name="app_name">Rumus Balok</string>
    <string name="hint_panjang">Masukkan Panjang</string>
    <string name="hint_lebar">Masukkan Lebar</string>
    <string name="hint_tinggi">Masukkan Tinggi</string>
    <string name="button_hitung">Hitung Volume dan Luas</string>
    <string name="hasil_volume_luas">Volume Balok: %.2f\nLuas Permukaan: %.2f</string>
    <string name="error_input">Silakan masukkan angka yang valid!</string>
</resources>