<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/editTextPanjang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_panjang"
        android:inputType="numberDecimal"/>

    <EditText
        android:id="@+id/editTextLebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_lebar"
        android:inputType="numberDecimal"/>

    <EditText
        android:id="@+id/editTextTinggi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_tinggi"
        android:inputType="numberDecimal"/>

    <Button
        android:id="@+id/buttonHitung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_hitung"/>

    <TextView
        android:id="@+id/textViewHasil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="16dp"/>

</LinearLayout>